// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ControlButton should render 1`] = `
<DocumentFragment>
  <div
    class="ControlButton-sc-1xp1l1a-0 irDSCf"
  />
</DocumentFragment>
`;

exports[`ControlButton should render active 1`] = `
<DocumentFragment>
  <div
    class="ControlButton-sc-1xp1l1a-0 kAaalh"
  />
</DocumentFragment>
`;

exports[`ControlButton should render changed with dot 1`] = `
<DocumentFragment>
  <div
    class="ControlButton-sc-1xp1l1a-0 fPlJYP"
  />
</DocumentFragment>
`;
